--- a/src/App.css
+++ b/src/App.css
@@ -470,6 +470,9 @@ img {
     height: 20px;
     width: 20px;
   }
+    .selectState{
+    height: fit-content;
+  }
 }
 @media screen and (max-width: 380px) {
   .selectCheckBox {
